[project]
name = "xai-threading"
version = "0.1.0"
description = "A Xircuits component for executing things in parallel"
authors = [{ name = "XpressAI", email = "eduardo@xpress.ai" }]
license = "MIT"
readme = "README.md"
repository = "https://github.com/XpressAI/xai-threading"
keywords = ["xircuits", "threading", "parallel processing"]

# Xircuits-specific configurations
[tool.xircuits]
default_example_path = "threading_example.xircuits"
requirements_path = "requirements.txt"
